Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30070

Ctrl+W closes integrated terminal, even with shortcuts blocked

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 13.0.0-beta1
    • Qt Creator 12.0.0
    • Terminal
    • None
    • Using Arch Linux Qt Creator package
    • Linux/Wayland, Linux/X11
    • 3795a9414 (master)

      When pressing Ctrl+W in the terminal, it closes the terminal window, even if 'Block global shortcuts' are selected. Other shortcuts such as Ctrl+R are properly blocked.

      The expected behavior would be to erase a word on the input line.

      Removing the default Ctrl+W shortcut for 'Close' resolves this, but I use this shortcut a lot to close actual editor windows.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            madwinter Marcus Tillmanns
            knutt Knut Tidemann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes