Terminal: Block Close Terminal

Fixes: QTCREATORBUG-30070
Change-Id: Id775bea9f3db851f07f6e86aedb02f975b5a7ee4
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: David Schulz <david.schulz@qt.io>